[ES7] Fix highlighting & fix ES type handling
Enable result highlighting in ES request builder (default pre/post tags, fragments and wildcard field) and wire it into ESStatement when SearchQuery requests highlighting. Improve ES metadata value deserialization by handling Number instances for Long/Double and LocalDate, and use pattern-matching instanceof for safer version parsing. Apply minor API/style refactors (final vars, timeouts) and update many tests: adjust expected facet counts, add/modify tests for security, remove operations, facet variants, clustering and highlighting, and tidy imports/headers.